// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LocalExecutionPermissionCard > Snapshot Tests > should match snapshot with PowerShell 1`] = `
<div
  style="width: 100%; opacity: 0; transform: translateY(8px) scale(0.98);"
>
  <div
    style="width: 100%; background-color: var(--color-bg-surface); border: 1px solid var(--color-border); border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.06); overflow: hidden;"
  >
    <div
      style="display: flex; align-items: center; gap: 12px; padding: 14px 20px 12px; border-bottom: 1px solid var(--color-border); background-color: var(--color-bg-subtle);"
    >
      <div
        style="width: 34px; height: 34px; border-radius: 10px; background-color: var(--color-bg-base); border: 1px solid var(--color-border); display: flex; align-items: center; justify-content: center; flex-shrink: 0;"
      >
        <svg
          aria-hidden="true"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          style="width: 18px; height: 18px; color: var(--color-text-secondary);"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6.75 7.5 3 2.25-3 2.25m4.5 0h3m-9 8.25h13.5A2.25 2.25 0 0 0 21 18V6a2.25 2.25 0 0 0-2.25-2.25H5.25A2.25 2.25 0 0 0 3 6v12a2.25 2.25 0 0 0 2.25 2.25Z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
      <div
        style="flex: 1 1 0%; min-width: 0px;"
      >
        <div
          style="font-size: 13.5px; font-weight: 600; color: var(--color-text-primary); line-height: 1.3; font-family: var(--font-sans);"
        >
          Allow EverFern to execute a command?
        </div>
        <div
          style="font-size: 12px; color: var(--color-text-secondary); margin-top: 2px; line-height: 1.4; font-family: var(--font-sans);"
        >
          Need to search for files on the local machine
        </div>
      </div>
      <div
        style="flex-shrink: 0; font-size: 11px; font-weight: 600; color: var(--color-text-secondary); background-color: var(--color-bg-base); border: 1px solid var(--color-border); padding: 3px 10px; border-radius: 20px; letter-spacing: 0.02em; text-transform: uppercase; font-family: var(--font-sans);"
      >
        PowerShell
      </div>
    </div>
    <div
      style="padding: 12px 20px; background-color: var(--color-bg-base); border-bottom: 1px solid var(--color-border);"
    >
      <code
        style="font-family: "Fira Code", "Cascadia Code", "Consolas", monospace; font-size: 13px; color: var(--color-text-primary); white-space: pre-wrap; word-break: break-all; line-height: 1.6; display: block;"
      >
        Get-ChildItem -Path C:\\\\ -Recurse
      </code>
    </div>
    <div
      style="display: flex; align-items: center; justify-content: flex-end; gap: 8px; padding: 12px 20px; background-color: var(--color-bg-surface);"
    >
      <div
        style="margin-right: auto; display: flex; align-items: center; gap: 6px; color: rgb(217, 119, 6); font-size: 12px; font-family: var(--font-sans);"
      >
        <svg
          fill="none"
          style="width: 14px; height: 14px; animation: spin 1.2s linear infinite; flex-shrink: 0;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            class="opacity-25"
            cx="12"
            cy="12"
            opacity="0.3"
            r="10"
            stroke="currentColor"
            stroke-width="2"
          />
          <path
            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
            fill="currentColor"
            opacity="0.8"
          />
        </svg>
        <span
          style="font-style: italic; color: rgb(161, 98, 7);"
        >
          Waiting for your reply…
        </span>
      </div>
      <button
        aria-label="Deny local execution"
        style="padding: 7px 16px; border-radius: 10px; border: 1px solid var(--color-border); background-color: var(--color-bg-surface); color: var(--color-text-secondary); font-size: 13px; font-weight: 500; cursor: pointer; opacity: 1; font-family: var(--font-sans); transition: all 0.15s ease; white-space: nowrap;"
      >
        Deny
      </button>
      <button
        aria-label="Always allow local execution for this session"
        style="padding: 7px 16px; border-radius: 10px; border: 1px solid var(--color-border); background-color: var(--color-bg-surface); color: var(--color-text-secondary); font-size: 13px; font-weight: 500; cursor: pointer; opacity: 1; font-family: var(--font-sans); transition: all 0.15s ease; white-space: nowrap;"
      >
        Always allow
      </button>
      <button
        aria-label="Allow local execution once"
        style="padding: 7px 18px; border-radius: 10px; border: 1px solid var(--color-text-primary); background-color: var(--color-text-primary); color: var(--color-bg-surface); font-size: 13px; font-weight: 600; cursor: pointer; opacity: 1; font-family: var(--font-sans); transition: all 0.15s ease; white-space: nowrap;"
      >
        Allow once
      </button>
    </div>
    <div
      style="padding: 0px 20px 12px; text-align: right; font-size: 11px; color: var(--color-text-tertiary, var(--color-text-secondary)); font-family: var(--font-sans); background-color: var(--color-bg-surface);"
    >
      “Always allow” applies to all commands in this chat until you switch conversations
    </div>
  </div>
  <style>
    
        @keyframes spin { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
      
  </style>
</div>
`;

exports[`LocalExecutionPermissionCard > Snapshot Tests > should match snapshot with default props 1`] = `
<div
  style="width: 100%; opacity: 0; transform: translateY(8px) scale(0.98);"
>
  <div
    style="width: 100%; background-color: var(--color-bg-surface); border: 1px solid var(--color-border); border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.06); overflow: hidden;"
  >
    <div
      style="display: flex; align-items: center; gap: 12px; padding: 14px 20px 12px; border-bottom: 1px solid var(--color-border); background-color: var(--color-bg-subtle);"
    >
      <div
        style="width: 34px; height: 34px; border-radius: 10px; background-color: var(--color-bg-base); border: 1px solid var(--color-border); display: flex; align-items: center; justify-content: center; flex-shrink: 0;"
      >
        <svg
          aria-hidden="true"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          style="width: 18px; height: 18px; color: var(--color-text-secondary);"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6.75 7.5 3 2.25-3 2.25m4.5 0h3m-9 8.25h13.5A2.25 2.25 0 0 0 21 18V6a2.25 2.25 0 0 0-2.25-2.25H5.25A2.25 2.25 0 0 0 3 6v12a2.25 2.25 0 0 0 2.25 2.25Z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
      <div
        style="flex: 1 1 0%; min-width: 0px;"
      >
        <div
          style="font-size: 13.5px; font-weight: 600; color: var(--color-text-primary); line-height: 1.3; font-family: var(--font-sans);"
        >
          Allow EverFern to execute a command?
        </div>
        <div
          style="font-size: 12px; color: var(--color-text-secondary); margin-top: 2px; line-height: 1.4; font-family: var(--font-sans);"
        >
          Need to search for files on the local machine
        </div>
      </div>
      <div
        style="flex-shrink: 0; font-size: 11px; font-weight: 600; color: var(--color-text-secondary); background-color: var(--color-bg-base); border: 1px solid var(--color-border); padding: 3px 10px; border-radius: 20px; letter-spacing: 0.02em; text-transform: uppercase; font-family: var(--font-sans);"
      >
        Bash
      </div>
    </div>
    <div
      style="padding: 12px 20px; background-color: var(--color-bg-base); border-bottom: 1px solid var(--color-border);"
    >
      <code
        style="font-family: "Fira Code", "Cascadia Code", "Consolas", monospace; font-size: 13px; color: var(--color-text-primary); white-space: pre-wrap; word-break: break-all; line-height: 1.6; display: block;"
      >
        grep -rnli "term" "/path/to/dir"
      </code>
    </div>
    <div
      style="display: flex; align-items: center; justify-content: flex-end; gap: 8px; padding: 12px 20px; background-color: var(--color-bg-surface);"
    >
      <div
        style="margin-right: auto; display: flex; align-items: center; gap: 6px; color: rgb(217, 119, 6); font-size: 12px; font-family: var(--font-sans);"
      >
        <svg
          fill="none"
          style="width: 14px; height: 14px; animation: spin 1.2s linear infinite; flex-shrink: 0;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            class="opacity-25"
            cx="12"
            cy="12"
            opacity="0.3"
            r="10"
            stroke="currentColor"
            stroke-width="2"
          />
          <path
            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
            fill="currentColor"
            opacity="0.8"
          />
        </svg>
        <span
          style="font-style: italic; color: rgb(161, 98, 7);"
        >
          Waiting for your reply…
        </span>
      </div>
      <button
        aria-label="Deny local execution"
        style="padding: 7px 16px; border-radius: 10px; border: 1px solid var(--color-border); background-color: var(--color-bg-surface); color: var(--color-text-secondary); font-size: 13px; font-weight: 500; cursor: pointer; opacity: 1; font-family: var(--font-sans); transition: all 0.15s ease; white-space: nowrap;"
      >
        Deny
      </button>
      <button
        aria-label="Always allow local execution for this session"
        style="padding: 7px 16px; border-radius: 10px; border: 1px solid var(--color-border); background-color: var(--color-bg-surface); color: var(--color-text-secondary); font-size: 13px; font-weight: 500; cursor: pointer; opacity: 1; font-family: var(--font-sans); transition: all 0.15s ease; white-space: nowrap;"
      >
        Always allow
      </button>
      <button
        aria-label="Allow local execution once"
        style="padding: 7px 18px; border-radius: 10px; border: 1px solid var(--color-text-primary); background-color: var(--color-text-primary); color: var(--color-bg-surface); font-size: 13px; font-weight: 600; cursor: pointer; opacity: 1; font-family: var(--font-sans); transition: all 0.15s ease; white-space: nowrap;"
      >
        Allow once
      </button>
    </div>
    <div
      style="padding: 0px 20px 12px; text-align: right; font-size: 11px; color: var(--color-text-tertiary, var(--color-text-secondary)); font-family: var(--font-sans); background-color: var(--color-bg-surface);"
    >
      “Always allow” applies to all commands in this chat until you switch conversations
    </div>
  </div>
  <style>
    
        @keyframes spin { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
      
  </style>
</div>
`;

exports[`LocalExecutionPermissionCard > Snapshot Tests > should match snapshot with long command 1`] = `
<div
  style="width: 100%; opacity: 0; transform: translateY(8px) scale(0.98);"
>
  <div
    style="width: 100%; background-color: var(--color-bg-surface); border: 1px solid var(--color-border); border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.06); overflow: hidden;"
  >
    <div
      style="display: flex; align-items: center; gap: 12px; padding: 14px 20px 12px; border-bottom: 1px solid var(--color-border); background-color: var(--color-bg-subtle);"
    >
      <div
        style="width: 34px; height: 34px; border-radius: 10px; background-color: var(--color-bg-base); border: 1px solid var(--color-border); display: flex; align-items: center; justify-content: center; flex-shrink: 0;"
      >
        <svg
          aria-hidden="true"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          style="width: 18px; height: 18px; color: var(--color-text-secondary);"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6.75 7.5 3 2.25-3 2.25m4.5 0h3m-9 8.25h13.5A2.25 2.25 0 0 0 21 18V6a2.25 2.25 0 0 0-2.25-2.25H5.25A2.25 2.25 0 0 0 3 6v12a2.25 2.25 0 0 0 2.25 2.25Z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
      <div
        style="flex: 1 1 0%; min-width: 0px;"
      >
        <div
          style="font-size: 13.5px; font-weight: 600; color: var(--color-text-primary); line-height: 1.3; font-family: var(--font-sans);"
        >
          Allow EverFern to execute a command?
        </div>
        <div
          style="font-size: 12px; color: var(--color-text-secondary); margin-top: 2px; line-height: 1.4; font-family: var(--font-sans);"
        >
          Need to search for files on the local machine
        </div>
      </div>
      <div
        style="flex-shrink: 0; font-size: 11px; font-weight: 600; color: var(--color-text-secondary); background-color: var(--color-bg-base); border: 1px solid var(--color-border); padding: 3px 10px; border-radius: 20px; letter-spacing: 0.02em; text-transform: uppercase; font-family: var(--font-sans);"
      >
        Bash
      </div>
    </div>
    <div
      style="padding: 12px 20px; background-color: var(--color-bg-base); border-bottom: 1px solid var(--color-border);"
    >
      <code
        style="font-family: "Fira Code", "Cascadia Code", "Consolas", monospace; font-size: 13px; color: var(--color-text-primary); white-space: pre-wrap; word-break: break-all; line-height: 1.6; display: block;"
      >
        find /path/to/search -type f -name '*.txt' -exec grep -l 'pattern' {} \\\\; | head -20
      </code>
    </div>
    <div
      style="display: flex; align-items: center; justify-content: flex-end; gap: 8px; padding: 12px 20px; background-color: var(--color-bg-surface);"
    >
      <div
        style="margin-right: auto; display: flex; align-items: center; gap: 6px; color: rgb(217, 119, 6); font-size: 12px; font-family: var(--font-sans);"
      >
        <svg
          fill="none"
          style="width: 14px; height: 14px; animation: spin 1.2s linear infinite; flex-shrink: 0;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            class="opacity-25"
            cx="12"
            cy="12"
            opacity="0.3"
            r="10"
            stroke="currentColor"
            stroke-width="2"
          />
          <path
            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
            fill="currentColor"
            opacity="0.8"
          />
        </svg>
        <span
          style="font-style: italic; color: rgb(161, 98, 7);"
        >
          Waiting for your reply…
        </span>
      </div>
      <button
        aria-label="Deny local execution"
        style="padding: 7px 16px; border-radius: 10px; border: 1px solid var(--color-border); background-color: var(--color-bg-surface); color: var(--color-text-secondary); font-size: 13px; font-weight: 500; cursor: pointer; opacity: 1; font-family: var(--font-sans); transition: all 0.15s ease; white-space: nowrap;"
      >
        Deny
      </button>
      <button
        aria-label="Always allow local execution for this session"
        style="padding: 7px 16px; border-radius: 10px; border: 1px solid var(--color-border); background-color: var(--color-bg-surface); color: var(--color-text-secondary); font-size: 13px; font-weight: 500; cursor: pointer; opacity: 1; font-family: var(--font-sans); transition: all 0.15s ease; white-space: nowrap;"
      >
        Always allow
      </button>
      <button
        aria-label="Allow local execution once"
        style="padding: 7px 18px; border-radius: 10px; border: 1px solid var(--color-text-primary); background-color: var(--color-text-primary); color: var(--color-bg-surface); font-size: 13px; font-weight: 600; cursor: pointer; opacity: 1; font-family: var(--font-sans); transition: all 0.15s ease; white-space: nowrap;"
      >
        Allow once
      </button>
    </div>
    <div
      style="padding: 0px 20px 12px; text-align: right; font-size: 11px; color: var(--color-text-tertiary, var(--color-text-secondary)); font-family: var(--font-sans); background-color: var(--color-bg-surface);"
    >
      “Always allow” applies to all commands in this chat until you switch conversations
    </div>
  </div>
  <style>
    
        @keyframes spin { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
      
  </style>
</div>
`;
